--- a/stadium/book_stadium/templates/book_stadium/owner.html
+++ b/stadium/book_stadium/templates/book_stadium/owner.html
@@ -80,7 +80,7 @@
                             <div class="crud-btn">
                                 <p>Sân số {{users.vi_tri}}</p>
                                 <input type="submit" class="btn btn-warning delete-btn" onclick="turnOnModalUpdate(event, {{ users.order_id }})" order-id="{{ users.order_id}}" max-number="{{ users.tong_san }}" value="Sửa">
-                                
+
                                 <div class="modal fade " id="update-{{ users.order_id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                                     aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered">
@@ -131,8 +131,8 @@
                             {% if users.da_duyet %}
                                 <div class="crud-btn accepted">
                                     <p id="accepted">Đã duyệt</p>
-                                    <p><i class="fas fa-times" onclick="turnOnModalDelete({{ users.order_id }})"></i></p>
-                                    
+                                    <p><i class="fas fa-times delete-order" onclick="turnOnModalDelete({{ users.order_id }})"></i></p>
+
                                     <div class="modal fade " id="delete-{{ users.order_id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                                         aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                         <div class="modal-dialog modal-dialog-centered">
@@ -191,7 +191,7 @@
                                 {% else %}
                                     <p>Hết sân</p>
                                 {% endif %}
-                                <p><i class="fas fa-times" onclick="turnOnModalDelete({{ users.order_id }})"></i></p>
+                                <p><i class="fas fa-times delete-order" onclick="turnOnModalDelete({{ users.order_id }})"></i></p>
                                 <div class="modal fade " id="delete {{ users.order_id }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
                                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered">
