add css style for div that contains save and delete btn

--- a/stadium/static/css/stadium_detail.css
+++ b/stadium/static/css/stadium_detail.css
@@ -44,10 +44,13 @@ h1 {
     position: relative;
 }
 
-.stadium-form-delete {
-    position: absolute;
-    top: 91%;
-    right: 43%;
+.save-and-delete-btn {
+    padding: 2%;
+    text-align: center;
+}
+
+.stadium-form-delete-btn {
+    width: 20%;
 }
 
 .stadium-form-detail button {
