--- a/stadium/book_stadium/templates/book_stadium/owner.html
+++ b/stadium/book_stadium/templates/book_stadium/owner.html
@@ -6,17 +6,21 @@
 {% endblock %}
 
 {% block content %}
-    {% for message in messages %}
-        {% if message.tags == 'error' %}
-            <div id="error" class="alert alert-danger" role="alert">
-                {{ message }}
-            </div>
-        {% else %}
-            <div id="success" class="alert alert-success" role="alert">
-                {{ message }}
-            </div>
+    <div id="message">
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.tags == 'error' %}
+                    <div id="error" class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                {% else %}
+                    <div id="success" class="alert alert-success" role="alert">
+                        {{ message }}
+                    </div>
+                {% endif %}
+            {% endfor %}
         {% endif %}
-    {% endfor %}
+    </div>
 
     {% for orders in orders_of_stadium %}
         <!-- It is {% now "D d M Y" %} -->
