--- a/stadium/book_stadium/templates/book_stadium/user_profile.html
+++ b/stadium/book_stadium/templates/book_stadium/user_profile.html
@@ -6,17 +6,22 @@
 {% endblock %}
 
 {% block content %}
-    {% for message in messages %}
-        <div class="alert alert-success" role="alert">
-            {{message}}
-        </div>
-    {% endfor %}
+    <div class="message" id="message">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success" role="alert">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
 
     {% if user.username == '' or user.phone_number == None %}
         <div class="alert alert-primary" role="alert">
             Hãy nhập số điện thoại và tên của bạn để đặt sân được tiện lợi hơn
         </div>
     {% endif %}
+
     <h2 class="border-bottom mb-4">Thông tin người dùng</h2>
     <div class="content-section">
         <form method="POST" enctype="multipart/form-data">
