--- a/stadium/static/css/stadium_detail.css
+++ b/stadium/static/css/stadium_detail.css
@@ -126,6 +126,16 @@ h1 {
 }
 
 table.timeframes th,
-table.timeframes td {
+table.timeframes td,
+table.timeframes input[type="number"],
+table.timeframes p {
     text-align: center;
+}
+
+table.timeframes p {
+    width: 100%;
+}
+
+table.timeframes th {
+    width: 15%;
 }
